Fix header logo being too small on desktop

--- a/src/styles/scss/Header.scss
+++ b/src/styles/scss/Header.scss
@@ -12,7 +12,7 @@
 @media screen and (min-width: 1440px) {
   .header {
     &__logo {
-      height: 26px;
+      height: 30px;
     }
   }
 }
